--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "Scrapes thousands of Chinese characters from https://en.wiktionary.org/wiki/Appendix:Mandarin_Frequency_lists",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node --no-warnings index.js"
   },
   "author": "Lewis Moronta",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12"
+  },
+  "engines": {
+    "node": ">=17.5.0"
   }
 }
